# observer

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: gh-pages.yml  test.yml
docs/: conf.py  index.md
observer/: __init__.py  address.py  client.py  client_manager.py  server.py
observer/static/: chart.js  index.js  monitor.js  quick-look.js  utils.js
observer/static/config/: config_index.js
observer/static/monitor/: monitor.js  monitor_index.js
observer/static/qlook/: qlook_index.js  quick-look.js
observer/templates/: header.html  index.html
observer/templates/config/: edit.html  index.html
observer/templates/monitor/: index.html
observer/templates/qlook/: index.html
package_name/: __init__.py
ros2viz/: __init__.py  address.py  client.py  ros_context.py  ros_topic.py  server.py
ros2viz/static/: chart.js  index.js  ros-tools.js
ros2viz/templates/: index.html
setup/: setup.sh
tests/: test_nothing.py
tests/docs/: test_build.py
