[tool.poetry]
name = "ros2viz"
version = "0.1.0"
description = "Quick visualization of ROS 2 topics"
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/KaoruNishikawa/ros2viz"
repository = "https://github.com/KaoruNishikawa/ros2viz"

[tool.poetry.scripts]
ros2viz = "ros2viz.server:main"
ros2viz-test = "ros2viz.server:test"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
psutil = "^5.9.4"
simple-websocket = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^7.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
