[tool.poetry]
name = "observer"
version = "0.2.0"
description = "Graphical console and central information provider for NECST system"
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/necst-telescope/observer"
repository = "https://github.com/necst-telescope/observer"

[tool.poetry.scripts]
observer = "observer.server:main"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
Flask-SocketIO = "^5.3.1"
psutil = "^5.9.4"
simple-websocket = "^0.9.0"
tomlkit = "^0.11.6"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
myst-parser = "^0.18.0"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^7.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
